# barq

./: .gitignore  LICENCE  pyproject.toml
barq/: __init__.py  fields.py  serializer.py
benchmarks/: complex.py  simple.py
src/barq/tests/: test_fields.py  test_serializers.py
tests/: test_fields.py  test_serializers.py
